<resources>
    <string name="app_name">Weight Tracking Application</string>
    <string name="username">Username</string>
    <string name="login">Login</string>
    <string name="new_user">New User</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="register">Register</string>
    <string name="first_name">First Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <string name="permission_needed">Permission needed</string>
    <string name="write_rationale">The ability to send SMS messages is needed to let you know when you hit your goal weight.</string>
    <string name="ok">OK</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="add_entry">Add Entry</string>
    <string name="today_s_date">Today\'s Date</string>
    <string name="daily_weight">Daily Weight</string>
    <string name="submit">Submit</string>
    <string name="register_daily_weight">Register Daily Weight</string>
    <string name="create_new_user">Create New User</string>
</resources>